<resources>
    <string name="app_name">androidlabs</string>
    <string name="welcome">Hello world!</string>
    <string name="firstText">Enter your email address:</string>
    <string name="emailInput">Type email here</string>
    <string name="secondText">Type your password:</string>
    <string name="loginButton">LOGIN</string>
    <string name="p2firstText">Your profile</string>
    <string name="p2secondText">Your name:</string>
    <string name="p2nameInput">Enter your name</string>
    <string name="p2thirdText">Your email:</string>
    <string name="p2emailInput">Enter your email</string>
    <string name="p2fourthText">Your picture:</string>
    <string name="p2fifthText">Click the button above to take a picture</string>
    <string name="p2chatButton">Join a chat!</string>
    <string name="p2weatherButton">Weather forecast!</string>
    <string name="p3firstButton">send</string>
    <string name="p3editText">click here</string>
    <string name="p3secondButton">receive</string>
</resources>
